--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+
+build
+.DS_Store
+
 # Logs
 logs
 *.log
@@ -81,6 +85,8 @@ out
 # Nuxt.js build / generate output
 .nuxt
 dist
+dist-electron
+release
 
 # Gatsby files
 .cache/
