--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "postinstall": "electron-builder install-app-deps",
-    "build": "npm run build:all",
+    "build": "npm run clean && npm run build:all",
+    "clean": "rimraf dist dist-electron release",
+    "prebuild:mac:all": "mkdir -p build && cp public/LILYGO.png build/icon.png",
+    "prebuild:mac": "mkdir -p build && cp public/LILYGO.png build/icon.png",
     "build:compile": "tsc && vite build",
     "build:all": "npm run build:compile && npm run build:mac:all && npm run build:win:all && npm run build:linux:all",
     "build:mac": "npm run build:compile && electron-builder --mac",
@@ -66,6 +69,7 @@
     "electron": "^29.4.6",
     "electron-builder": "^24.13.3",
     "postcss": "^8.4.35",
+    "rimraf": "^6.1.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2",
     "vite": "^5.1.5",
