--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "postinstall": "electron-builder install-app-deps",
     "build": "npm run clean && npm run build:all",
     "clean": "rimraf dist dist-electron release",
-    "prebuild:mac:all": "shx mkdir -p build && shx cp public/LILYGO.png build/icon.png",
-    "prebuild:mac": "shx mkdir -p build && shx cp public/LILYGO.png build/icon.png",
+    "prebuild": "shx mkdir -p build && shx cp public/LILYGO.png build/icon.png",
+    "prebuild:mac:all": "npm run prebuild",
+    "prebuild:mac": "npm run prebuild",
     "build:compile": "tsc && vite build",
     "build:all": "npm run build:compile && npm run build:mac:all && npm run build:win:all && npm run build:linux:all",
     "build:mac": "npm run build:compile && electron-builder --mac",
-    "build:mac:all": "npm run build:mac:arm64:only && npm run build:mac:x64:only && npm run build:mac:universal:only",
+    "build:mac:all": "npm run prebuild && npm run build:mac:arm64:only && npm run build:mac:x64:only && npm run build:mac:universal:only",
     "build:mac:arm64": "npm run build:compile && electron-builder --mac --arm64",
     "build:mac:arm64:only": "electron-builder --mac --arm64",
     "build:mac:x64": "npm run build:compile && electron-builder --mac --x64",
@@ -21,9 +22,11 @@
     "build:mac:universal": "npm run build:compile && electron-builder --mac --universal",
     "build:mac:universal:only": "electron-builder --mac --universal",
     "build:win": "npm run build:compile && electron-builder --win",
-    "build:win:all": "npm run build:win:x64:only",
+    "build:win:all": "npm run prebuild && npm run build:win:x64:only && npm run build:win:arm64:only",
     "build:win:x64": "npm run build:compile && electron-builder --win --x64",
     "build:win:x64:only": "electron-builder --win --x64",
+    "build:win:arm64": "npm run build:compile && electron-builder --win --arm64",
+    "build:win:arm64:only": "electron-builder --win --arm64",
     "build:linux": "npm run build:compile && electron-builder --linux",
     "build:linux:all": "npm run build:linux:arm64:only && npm run build:linux:x64:only",
     "build:linux:arm64": "npm run build:compile && electron-builder --linux --arm64",
