--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,7 @@ jobs:
       - name: Rename and Filter macOS artifacts
         run: |
           mkdir -p final-artifacts
+          ls -R release/
           # 规范命名并只保留 dmg
           cp release/*-arm64.dmg final-artifacts/LILYGO-Spark-0.1.0-macOS-arm64.dmg || true
           cp release/*-universal.dmg final-artifacts/LILYGO-Spark-0.1.0-macOS-universal.dmg || true
@@ -79,12 +80,13 @@ jobs:
         shell: bash
         run: |
           mkdir -p final-artifacts
+          ls -R release/
           # 规范命名
-          cp release/*arm64*.exe final-artifacts/LILYGO-Spark-0.1.0-Windows-Setup-arm64.exe || true
-          cp release/*x64*.exe final-artifacts/LILYGO-Spark-0.1.0-Windows-Setup-x64.exe || true
-          # 处理可能不带架构名的默认文件
-          if [ ! -f final-artifacts/LILYGO-Spark-0.1.0-Windows-Setup-x64.exe ]; then
-            cp release/*.exe final-artifacts/LILYGO-Spark-0.1.0-Windows-Setup-x64.exe || true
+          cp release/*arm64*.exe final-artifacts/LILYGO-Spark-0.1.0-windows-setup-arm64.exe || true
+          cp release/*x64*.exe final-artifacts/LILYGO-Spark-0.1.0-windows-setup-x64.exe || true
+          # 处理可能不带架构名的默认文件 (通常是 x64)
+          if [ ! -f final-artifacts/LILYGO-Spark-0.1.0-windows-setup-x64.exe ]; then
+            cp release/*.exe final-artifacts/LILYGO-Spark-0.1.0-windows-setup-x64.exe || true
           fi
       - uses: actions/upload-artifact@v4
         with:
@@ -109,12 +111,18 @@ jobs:
       - name: Rename Linux artifacts
         run: |
           mkdir -p final-artifacts
+          ls -R release/
           # AppImage
-          cp release/*arm64.AppImage final-artifacts/LILYGO-Spark-0.1.0-Linux-arm64.AppImage || true
-          cp release/*x86_64.AppImage final-artifacts/LILYGO-Spark-0.1.0-Linux-x64.AppImage || true
+          cp release/*arm64.AppImage final-artifacts/LILYGO-Spark-0.1.0-linux-arm64.AppImage || true
+          cp release/*x86_64.AppImage final-artifacts/LILYGO-Spark-0.1.0-linux-x64.AppImage || true
+          # 处理可能不带架构名的默认文件 (通常是 x64)
+          if [ ! -f final-artifacts/LILYGO-Spark-0.1.0-linux-x64.AppImage ]; then
+            cp release/*.AppImage final-artifacts/LILYGO-Spark-0.1.0-linux-x64.AppImage || true
+          fi
+          
           # deb
-          cp release/*arm64.deb final-artifacts/LILYGO-Spark-0.1.0-Linux-arm64.deb || true
-          cp release/*amd64.deb final-artifacts/LILYGO-Spark-0.1.0-Linux-x64.deb || true
+          cp release/*arm64.deb final-artifacts/LILYGO-Spark-0.1.0-linux-arm64.deb || true
+          cp release/*amd64.deb final-artifacts/LILYGO-Spark-0.1.0-linux-x64.deb || true
       - uses: actions/upload-artifact@v4
         with:
           name: Linux-artifacts
@@ -125,6 +133,7 @@ jobs:
     if: ${{ github.event_name != 'pull_request' }}
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
